[package]
name = "rust-biomart"
version = "0.1.0"
authors = ["Till Hartmann <till.hartmann@udo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyper = "0.13"
#tokio =  { version = "0.2", features = ["macros", "tcp", "dns", "io-util", "io-std", "rt-core", "sync"] }
reqwest = { version = "0.10", features = ["blocking"] }
itertools = "0.8.2"
xmltree = "0.10"
maplit = "1.0"
csv = "1.1"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.4"
getset = "0.1"